<resources>
    <string name="app_name">Tru Deals</string>
    <string name="label_dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac  </string>
    <string name="connection_exception">No Internet connection. Please check your Internet connection and try again.</string>
    <string name="socket_time_out_exception">Connection timeout</string>
    <string name="other_exception">Something is wrong here</string>
    <string name="hint_search">Search</string>
    <string name="label_reset">Reset</string>
    <string name="button_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="message_yes">Yes</string>
    <string name="message_no">No</string>
    <string name="message_please_login_to_continue">Please login to continue</string>
    <string name="title_more">More</string>
    <string name="title_home">Home</string>
    <string name="title_second">Second</string>
    <string name="label_if_room">IF_ROOM</string>
    <string name="label_always">ALWAYS</string>
    <string name="label_never">NEVER</string>
    <string name="label_select_image">Select Image</string>
    <string name="label_select_video">Select Video</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="validation_please_enter_first_name">Please enter first name</string>
    <string name="validation_please_enter_last_name">Please enter last name</string>
    <string name="validation_please_enter_valid_first_name">Please enter minimum of three characters in first name</string>
    <string name="validation_please_enter_valid_last_name">Please enter minimum of three characters in last name</string>
    <string name="validation_please_enter_mobile_number">Please enter mobile number</string>
    <string name="validation_please_enter_mobile_number_or_email_address">Please enter mobile number or email address</string>
    <string name="validation_please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="validation_please_enter_password">Please enter password</string>
    <string name="validation_please_enter_current_password">Please enter current password</string>
    <string name="validation_please_enter_new_password">Please enter new password</string>
    <string name="validation_please_enter_old_password">Please enter old password</string>
    <string name="validation_password_should_be_at_least_8_char_long">Please enter valid password it should be minimum length 8 contain one uppercase, one lowercase, one digit and one special character</string>
    <string name="validation_enter_name">Please enter name</string>
    <string name="validation_enter_company_name">Please enter company name</string>
    <string name="validation_enter_email_address">Please enter email address</string>
    <string name="validation_enter_email">Please enter email</string>
    <string name="validation_enter_valid_email_address">Please enter valid email address</string>
    <string name="validation_password_and_confirm_password_should_be_same">Password mismatch</string>
    <string name="validation_please_accept_terms_and_condition">Please agree to the Terms of Service and Privacy Policy.</string>
    <string name="validation_enter_card_number">Please enter card number</string>
    <string name="validation_enter_valid_card_number">Please enter valid card number</string>
    <string name="validation_enter_card_holder_name">Please enter card holder name</string>
    <string name="validation_enter_valid_card_holder_name">Please enter minimum of three characters in card holder name</string>
    <string name="validation_choose_expiry_date">Please choose expiry date</string>
    <string name="validation_enter_cvv">Please enter CVV</string>
    <string name="validation_enter_valid_cvv">Please enter valid CVV</string>
    <string name="validation_choose_address_type">Please choose address type</string>
    <string name="validation_enter_street_address">Please enter street address</string>
    <string name="validation_enter_state">Please enter state</string>
    <string name="validation_enter_city">Please enter city</string>
    <string name="validation_enter_zip_code">Please enter zip code</string>
    <string name="btn_next">Next</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="label_show_more">Show More</string>
    <string name="label_ask_a_question">Ask a Question</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_message">Message</string>
    <string name="label_allow_sms_local_deals">User authorizes the use of SMS communication with the issuing business.</string>
    <string name="label_notify_user">User wishes to be notified any time a new deal is issued, or modified by this business.</string>
    <string name="btn_send_message">Send Message</string>
    <string name="label_deal_description">Deal Description</string>
    <string name="dummy_deal_description">Occupying over 8,000 square feet, perched over 1,100 feet in the air with absolutely breathtaking panoramic 360-degree views of all of New York City and the surrounding tri-state area, The 82nd Floor at 432 Park Avenue has been completely reimagined by one of the most sought-after design houses in London and represents an utterly unique opportunity to own a globally significant property.</string>
    <string name="hint_select">Select</string>
    <string name="hint_type_here">Type here</string>
    <string name="x_out_of_8000">0/8000</string>
    <string name="label_business_name">Business Name</string>
    <string name="label_business_description">Business Description</string>
    <string name="label_business_category">Business Category</string>
    <string name="label_business_address">Business Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="label_zip_code">Zip Code</string>
    <string name="hint_landmarks">Landmarks</string>
    <string name="label_landmarks">Landmarks</string>
    <string name="alphabets_and_numbers">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
</resources>