<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessName"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/label_business_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextBusinessName"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:drawableStart="@drawable/ic_suitcase"
            android:hint="@string/hint_type_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessDescription"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/label_business_description"
            app:layout_constraintEnd_toStartOf="@id/descriptionCounter"
            app:layout_constraintStart_toStartOf="@id/editTextBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextBusinessName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionCounter"
            style="@style/Regular.8ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_out_of_8000"
            app:layout_constraintBottom_toBottomOf="@id/textViewBusinessDescription"
            app:layout_constraintEnd_toEndOf="@id/editTextBusinessName"
            app:layout_constraintStart_toEndOf="@id/textViewBusinessDescription"
            app:layout_constraintTop_toTopOf="@id/textViewBusinessDescription" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextBusinessDescription"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="top"
            android:hint="@string/hint_type_here"
            android:inputType="textMultiLine"
            android:lines="@integer/int_4"
            android:nestedScrollingEnabled="true"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/dp_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewDescriptionIc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_9sdp"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessDescription"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessDescription"
            app:srcCompat="@drawable/ic_description_orange" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessCategory"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/label_business_category"
            app:layout_constraintEnd_toEndOf="@id/textViewBusinessName"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextBusinessDescription" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextSelectBusinessCategory"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_suitcase"
            android:drawableEnd="@drawable/ic_down_arrow_orange"
            android:focusable="false"
            android:hint="@string/hint_select"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessCategory" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessAddress"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/label_business_address"
            app:layout_constraintEnd_toEndOf="@id/textViewBusinessName"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextSelectBusinessCategory" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextBusinessAddress"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_description_orange"
            android:hint="@string/hint_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessAddress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessCity"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/label_city"
            app:layout_constraintEnd_toEndOf="@id/textViewBusinessName"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextBusinessAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextBusinessCity"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_description_orange"
            android:hint="@string/hint_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessCity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessState"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/label_state"
            app:layout_constraintEnd_toEndOf="@id/textViewBusinessName"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextBusinessCity" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextBusinessState"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_description_orange"
            android:hint="@string/hint_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessState" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessZipcode"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/label_zip_code"
            app:layout_constraintEnd_toEndOf="@id/textViewBusinessName"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextBusinessState" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextBusinessZipCode"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_description_orange"
            android:hint="@string/hint_zip_code"
            android:digits="@string/alphabets_and_numbers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessZipcode" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusinessLandmarks"
            style="@style/SemiBold.10ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/label_landmarks"
            app:layout_constraintEnd_toEndOf="@id/textViewBusinessName"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextBusinessZipCode" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextBusinessLandmarks"
            style="@style/AuthEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_description_orange"
            android:hint="@string/hint_landmarks"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBusinessLandmarks" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNext"
            style="@style/AppButtonCustomStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textViewBusinessName"
            app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
            app:layout_constraintTop_toBottomOf="@id/editTextBusinessLandmarks"
            app:layout_constraintVertical_bias="@integer/int_1"
            app:textAllCaps="false" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>