<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_6sdp"
    app:strokeColor="@color/C_DFDFDF"
    app:strokeWidth="@dimen/dp_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAskAQuestion"
            style="@style/Bold.15ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/label_ask_a_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextFirstName"
            style="@style/OutlinedBoxEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="@string/hint_first_name"
            android:maxLength="@integer/int_name_max_length"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/textViewAskAQuestion" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextLastName"
            style="@style/OutlinedBoxEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hint_last_name"
            android:maxLength="@integer/int_name_max_length"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/editTextFirstName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextEmailAddress"
            style="@style/OutlinedBoxEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hint_email_address"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/editTextLastName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPhoneNumber"
            style="@style/OutlinedBoxEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hint_phone_number"
            android:inputType="number"
            android:maxLength="@integer/int_phone_number_max_length"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/editTextEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextMessage"
            style="@style/OutlinedBoxEditTextStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="top"
            android:hint="@string/hint_message"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="@integer/int_5"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxAllowSMS"
            style="@style/Regular.9ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:button="@drawable/selector_checkbox"
            android:gravity="top"
            android:paddingStart="@dimen/_7sdp"
            android:paddingEnd="@dimen/dp_0"
            android:text="@string/label_allow_sms_local_deals"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/editTextMessage" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxNotifyUser"
            style="@style/Regular.9ssp.C_000000"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_checkbox"
            android:gravity="top"
            android:paddingStart="@dimen/_7sdp"
            android:paddingEnd="@dimen/dp_0"
            android:text="@string/label_notify_user"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/checkboxAllowSMS" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendMessage"
            style="@style/AppButtonCustomStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/btn_send_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textViewAskAQuestion"
            app:layout_constraintStart_toStartOf="@id/textViewAskAQuestion"
            app:layout_constraintTop_toBottomOf="@id/checkboxNotifyUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>