<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        style="@style/Bold.11ssp.C_000000"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/label_deal_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDescription"
        style="@style/Regular.9ssp.C_000000"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="@integer/int_2"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/dummy_deal_description"
        app:layout_constraintEnd_toEndOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="@id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewShowMoreLess"
        style="@style/SemiBold.10ssp.C_ED1D26"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/label_show_more"
        app:layout_constraintEnd_toEndOf="@id/textViewDescription"
        app:layout_constraintStart_toStartOf="@id/textViewDescription"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>